Fix horizontal scrolling

--- a/app/javascript/stylesheets/home/index.scss
+++ b/app/javascript/stylesheets/home/index.scss
@@ -40,12 +40,13 @@ section.jobs {
 
 section.publications {
   .publication-icon {
-    margin-top: 1em;
-    margin-left: 2em;
+    margin: 1em 1em 0;
 
     picture,
     img {
       height: 70px;
+      max-width: 100%;
+      object-fit: contain;
     }
   }
 }
